# NewsTgBot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  NOTICE  PRODUCTION_READY.md  README.md  SECURITY.md  auth.py  bot.py  channel_reader.py  config.py  database.py  deduplicator.py  default_sources.json  docker-compose.local.yml  docker-compose.server.yml  docker-compose.yml  llm_client.py  migrate_add_source_type.py  pipeline_executor.py  pipeline_scheduler.py  poster.py  requirements-dev.txt  requirements.txt  run_bot.py  scheduler.py  setup.cfg  source_identity.py  telegram_account.py  web_app.py
.github/workflows/: quality.yml  tests.yml
deploy/: forestserver.ru.newsbot.caddy
parsers/: __init__.py  base.py  parser_manager.py  rss_parser.py  telethon_parser.py  web_parser.py
scripts/: README.md  prepare-git.sh  test.sh  validate.sh
tests/: conftest.py  test_auth.py  test_config.py  test_core.py  test_database.py  test_parsers.py
web/: app.js  index.html  styles.css
