[metadata]
name = NewsTgBot
version = 1.0.0
description = Self-hosted IT news aggregator with web admin panel and Telegram bot
long_description = file: README.md
long_description_content_type = text/markdown
author = NewsTgBot contributors
license = AGPL-3.0-or-later
license_files = LICENSE, NOTICE
url = https://github.com/username/NewsTgBot
project_urls =
    Bug Tracker = https://github.com/username/NewsTgBot/issues
    Documentation = https://github.com/username/NewsTgBot#readme
    Source Code = https://github.com/username/NewsTgBot

[options]
packages = find:
python_requires = >=3.11
install_requires =
    python-telegram-bot>=20.7
    aiohttp>=3.9.1
    python-dotenv>=1.0.0
    telethon>=1.34.0
    feedparser>=6.0.10
    playwright>=1.40.0
    fastapi>=0.110.0
    uvicorn[standard]>=0.27.0
    pydantic>=2.6.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0
    pylint>=2.17.0
    flake8>=6.0.0
    black>=23.0
    mypy>=1.0
    types-feedparser
    types-requests

[options.packages.find]
where = .
include = *
exclude =
    tests
    tests.*
    .venv
    venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --strict-markers
    --strict-config
    --cov=.
    --cov-report=html
    --cov-report=term-missing
    --cov-fail-under=50

[coverage:run]
branch = true
omit =
    .venv/*
    */site-packages/*
    tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

[mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[flake8]
max-line-length = 120
extend-ignore = E203, E266, E501, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .pytest_cache,
    build,
    dist,
    *.egg-info

[pylint]
max-line-length = 120
disable =
    missing-docstring,
    too-few-public-methods,
    too-many-arguments,
    too-many-instance-attributes,
    broad-except
good-names = i, j, k, ex, Run, _, db, id, x, y, z, df, fn, ax, ay

